--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "^2.6.9",
@@ -15,6 +16,6 @@
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.12",
     "morgan": "^1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "^2.0.0-beta11"
   }
 }
